# netavark-wireguard-plugin

./: Cargo.toml  LICENSE  Makefile  README.md
.github/: test.yml
.github/workflows/: release.yaml  test.yml
src/: main.rs
src/from_netavark/: netlink_socket.rs
src/sockets/: mod.rs
test/: 500-plugin.bats  helpers.bash  plugin-tests.bats
test/testfiles/: wireguard.conf
